--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@hookform/resolvers": "^3.9.1",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.3",
     "@rn-primitives/slot": "^1.1.0",
@@ -57,7 +58,7 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.15",
     "tailwindcss-animate": "^1.0.7",
-    "undefined": "@hookform/resolvers/zod",
+    "use-debounce": "^10.0.4",
     "xior": "^0.6.1",
     "zod": "^3.23.8"
   },
@@ -70,6 +71,7 @@
     "eslint-config-expo": "~8.0.1",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
