--- a/app/package.json
+++ b/app/package.json
@@ -54,6 +54,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
+    "react-native-toastable": "^0.5.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.4",
     "tailwind-merge": "^2.5.4",
